Fixed ERRAI-789: Translation bundle scanner fails for directories that contain spaces